--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-std = {version  = "1.11.0", features = ["attributes"]}
+async-trait = "0.1.53"
 chrono = { version = "0.4", features = ["serde"] }
 clap = {version = "3.1.8", features = ["derive"]}
-yahoo_finance_api = { version = "1.1", features = ["blocking"] }
+yahoo_finance_api = { version = "1.1" }
